<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_loginBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toTopOf="@+id/h_guideline1" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="3"
        android:text="@string/tv_login"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/textMediumSize"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline3"
        app:layout_constraintStart_toStartOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <LinearLayout
        android:id="@+id/ll_container_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline3"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline4"
        app:layout_constraintStart_toStartOf="@+id/v_guideline1"
        app:layout_constraintTop_toTopOf="@+id/h_guideline2">

        <EditText
            android:id="@+id/ed_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/marginMediumSize"
            android:background="@drawable/ed_selector"
            android:gravity="start|center"
            android:hint="@string/ed_loginEmail"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            android:textSize="@dimen/textSmallSize" />

        <TextView
            android:id="@+id/tv_login_emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMediumSize"
            android:text="@string/tv_login_emailError"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSmallSize"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ed_loginSenha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/marginMediumSize"
            android:background="@drawable/ed_selector"
            android:gravity="start|center"
            android:hint="@string/ed_loginSenha"
            android:inputType="textPassword"
            android:textAllCaps="true"
            android:textSize="@dimen/textSmallSize" />

        <TextView
            android:id="@+id/tv_login_senhaError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMediumSize"
            android:text="@string/tv_login_passwordError"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSmallSize"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bt_login_selector"
            android:text="@string/bt_Login"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textSmallSize" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>